# influxdb3-rust

./: .gitignore  .markdownlint.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.circleci/: config.yml
.config/: nextest.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEATURE_REQUEST.yml  SUPPORT.yml
.github/workflows/: codeql-analysis.yml  linter.yml  rust-publish.yml
benches/: dataframe_lp.rs
examples/: cloud_dedicated.rs  query.rs  quickstart.rs  write.rs  write_dataframe.rs
scripts/: influxdb-setup.sh
src/: client.rs  config.rs  error.rs  flight.rs  lib.rs  point.rs  precision.rs  query.rs  retry.rs  write.rs  write_dataframe.rs
tests/: client.rs  config_tests.rs  flight.rs  point_tests.rs  query_result_tests.rs  retry_tests.rs  write_tests.rs
